@@ -226,6 +226,7 @@ OP_MobHealth=0x15de					# C
 OP_InitialMobHealth=0x5cb0			# C
 OP_TargetHoTT=0x4d56				# C
 OP_TargetBuffs=0x3f24				# C
+OP_BuffCreate=0x2121                # V
 OP_DeleteSpawn=0x58c5				# C
 OP_AutoAttack=0x1df9				# C
 OP_AutoAttack2=0x517b				# C
@@ -322,6 +323,25 @@ OP_Action2=0x0000					# C OP_Damage?
 OP_MobUpdate=0x4656					# Same as OP_SpawnPositionUpdate
 OP_NPCMoveUpdate=0x0f3e				#
 OP_CameraEffect=0x6b0e				# V
+OP_SpellEffect=0x57a3				# V
+
+OP_DzQuit=0x1539
+OP_DzListTimers=0x21e9
+OP_DzAddPlayer=0x3657
+OP_DzRemovePlayer=0x054e
+OP_DzSwapPlayer=0x4661
+OP_DzMakeLeader=0x226f
+OP_DzPlayerList=0x74e4
+OP_DzJoinExpeditionConfirm=0x3c5e
+OP_DzJoinExpeditionReply=0x1154
+OP_DzExpeditionInfo=0x1150
+OP_DzMemberStatus=0x2d17
+OP_DzLeaderStatus=0x2caf
+OP_DzExpeditionEndsWarning=0x6ac2
+OP_DzExpeditionList=0x70d8
+OP_DzMemberList=0x15c4
+OP_DzCompass=0x01cb
+OP_DzChooseZone=0x0000
 
 # New Opcodes
 OP_SpawnPositionUpdate=0x4656		# C
