@@ -1,5 +1,9 @@
 ﻿EQExtractor2 Changelog. All changes since the 1.0 release.
 
+==07/14/2010==
+Derision: Renamed PatchTestJune242010Decoder to PatchJuly132010Decoder. 
+Derision: Updated patch_May12-2010.conf with current EQEmu patch_Live.conf. Updated version number to 2.0.5
+
 ==06/26/2010==
 Derision: Removed the need to duplicate certain methods when deriving a new decoder.
 Derision: Moved patch specific variable setting (PPLength, Name etc.) into the decoder constructor
